feat: add board apis
